syntax = "proto3";

package pb;

import "article.proto";

option go_package = "github.com/MonitorAllen/nostalgia/pb";

message GetArticleRequest {
  string id = 1;
}

message GetArticleResponse {
  Article article = 1;
}
